# cloud_sentinel_v2

./: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  __init__.py  app.py  cloud_sentinel_environment.py
